--- a/public/index.html
+++ b/public/index.html
@@ -674,7 +674,7 @@ async function cargarPedidosDashboard() {
         if (!userData || !userData.estaciones) return;
 
         const misEstacionesIds = userData.estaciones.split(',').map(s => s.trim());
-        const filtradas = estacionesData.filter(est => {return misEstacionesIds.includes(est.id)});
+        const filtradas = estacionesData.filter(est => { return misEstacionesIds.includes(est.id)});
 
         if (filtradas.length === 0) {
             container.innerHTML = `<div class="p-20 text-center"><p class="text-slate-400 font-bold">No hay datos disponibles.</p></div>`;
@@ -749,52 +749,109 @@ async function cargarPedidosDashboard() {
     }
 
     function irMisPedidos() {
-        ocultarTodasLasVistas();
-        const pedView = document.getElementById('pedidosView');
-        if(pedView) {
-            pedView.classList.remove('hidden');
-            renderizarPedidosLista('Todos');
-        }
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
+console.log("Cambiando a vista Mis Pedidos...");
+const dash = document.getElementById('dashboardView');
+const estView = document.getElementById('estacionesView');
+const pedView = document.getElementById('pedidosView');
+ 
+ // Ocultamos TODO lo demás primero
+ if(dash) dash.classList.add('hidden');
+ if(estView) estView.classList.add('hidden');
+ 
+ // Mostramos la vista de pedidos
+ if(pedView) {
+ pedView.classList.remove('hidden');
+ // Importante: Renderizar solo una vez
+ renderizarPedidosLista('Todos');
+ }
 
-    async function renderizarPedidosLista(filtro = 'Todos') {
-        const container = document.getElementById('listaPedidosCompleta');
-        const userData = JSON.parse(localStorage.getItem('usuario'));
-        container.innerHTML = '<div class="p-10 text-center text-slate-400 animate-pulse font-bold text-xs uppercase">Filtrando pedidos...</div>';
-        try {
-            const response = await fetch(`/api/obtener-pedidos?estaciones=${encodeURIComponent(userData.estaciones)}&rol=${userData.rol}`);
-            const data = await response.json();
-            let pedidos = data.pedidos || [];
-            if (filtro !== 'Todos') pedidos = pedidos.filter(p => p.estatus.toLowerCase() === filtro.toLowerCase());
-            
-            if (pedidos.length === 0) {
-                container.innerHTML = `<div class="p-12 text-center text-slate-500 font-bold">No hay pedidos "${filtro}"</div>`;
-                return;
-            }
+ // Subir al inicio de la página
+ window.scrollTo({ top: 0, behavior: 'smooth' });
+}
 
-            container.innerHTML = pedidos.map(p => {
-                const colors = { 'Pendiente': 'orange', 'En Ruta': 'purple', 'Entregado': 'emerald', 'Cancelado': 'red' };
-                const color = colors[p.estatus] || 'blue';
-                return `
-                <div class="bg-white p-6 rounded-[2rem] border border-slate-100 shadow-sm mb-4">
-                    <div class="flex justify-between items-center gap-4">
-                        <div class="flex items-center gap-4">
-                            <div class="h-12 w-12 bg-${color}-50 text-${color}-600 rounded-2xl flex items-center justify-center"><i class="far fa-box"></i></div>
-                            <div>
-                                <span class="text-[10px] font-black uppercase text-${color}-600">${p.estatus}</span>
-                                <h3 class="font-black text-slate-900 text-lg uppercase">${p.estacion}</h3>
-                                <p class="text-xs text-slate-400 font-bold">${p.producto} — ${p.litros} L</p>
-                            </div>
-                        </div>
-                        <button onclick="verDetallePedido('${p.id}')" class="bg-[#1e293b] text-white px-5 py-3 rounded-xl font-black text-[10px] uppercase">Detalles</button>
-                    </div>
-                </div>`;
-            }).join('');
-        } catch (e) {
-            container.innerHTML = '<p class="text-red-500 text-center p-10 font-bold">Error de conexión.</p>';
-        }
-    }
+function filtrarPedidos(estatus) {
+ // Cambiar estilo de los botones de filtro
+ const botones = document.querySelectorAll('.filter-btn');
+botones.forEach(btn => {
+ btn.classList.remove('bg-slate-900', 'text-white', 'active');
+ btn.classList.add('bg-white', 'text-slate-400', 'border-slate-100');
+ });
+
+ // Resaltar el botón presionado (puedes ajustar esto según tu diseño)
+ const btnActivo = event.currentTarget;
+ btnActivo.classList.remove('bg-white', 'text-slate-400');
+ btnActivo.classList.add('bg-slate-900', 'text-white', 'active');
+ 
+ renderizarPedidosLista(estatus);
+}
+
+async function renderizarPedidosLista(filtro = 'Todos') {
+ const container = document.getElementById('listaPedidosCompleta');
+ const userData = JSON.parse(localStorage.getItem('usuario'));
+ 
+ // Mostrar un loader simple mientras carga
+ container.innerHTML = '<div class="p-10 text-center text-slate-400 animate-pulse font-bold uppercase text-xs tracking-widest">Filtrando pedidos...</div>';
+
+ try {
+ const response = await fetch(`/api/obtener-pedidos?estaciones=${encodeURIComponent(userData.estaciones)}&rol=${userData.rol}`);
+ const data = await response.json();
+ let pedidos = data.pedidos || [];
+
+ // Aplicar el filtro lógico
+ if (filtro !== 'Todos') {
+ pedidos = pedidos.filter(p => p.estatus.toLowerCase() === filtro.toLowerCase());
+ }
+
+ // Si después de filtrar no hay nada, mostrar aviso (para que no quede en blanco)
+ if (pedidos.length === 0) {
+ container.innerHTML = `
+ <div class="bg-slate-50 border-2 border-dashed border-slate-200 rounded-[2rem] p-12 text-center">
+ <i class="fas fa-folder-open text-slate-300 text-4xl mb-4"></i>
+ <p class="text-slate-500 font-bold">No se encontraron pedidos con estatus "${filtro}"</p>
+ </div>`;
+ return;
+ }
+
+ // Dibujar los pedidos
+container.innerHTML = pedidos.map(p => {
+ // 1. Determinamos el color (Tu lógica que ya funciona)
+ //  const color = p.estatus === 'Pendiente' ? 'orange' : 
+ p.estatus === 'En Ruta' ? 'purple' : 
+ p.estatus === 'Entregado' ? 'emerald' : 
+ p.estatus === 'Cancelado' ? 'red' : 'blue';
+
+// 2. Determinamos el icono de forma segura
+let icono = 'fa-box'; // Icono por defecto
+ if (p.estatus === 'Pendiente') icono = 'fa-clock';
+ if (p.estatus === 'En Ruta')   icono = 'fa-truck-fast';
+ if (p.estatus === 'Entregado') icono = 'fa-check-circle';
+ if (p.estatus === 'Cancelado') icono = 'fa-ban';
+
+ return `
+ <div class="bg-white p-6 rounded-[2rem] border border-slate-100 shadow-sm hover:shadow-md transition-all mb-4">
+ <div class="flex flex-wrap justify-between items-center gap-4">
+ <div class="flex items-center gap-4">
+ <div class="h-12 w-12 bg-${color}-50 text-${color}-600 rounded-2xl flex items-center justify-center text-xl">
+ <i class="far ${icono}"></i>
+ </div>
+ <div>
+ <span class="text-[10px] font-black uppercase text-${color}-600 tracking-widest">${p.estatus}</span>
+ <h3 class="font-black text-slate-900 text-lg uppercase">${p.estacion}</h3>
+ <p class="text-xs text-slate-400 font-bold uppercase">${p.producto} — ${p.litros} L</p>
+ </div>
+ </div>
+<button onclick="verDetallePedido('${p.id}')" class="bg-[#1e293b] text-white px-5 py-3 rounded-xl font-black text-[10px] uppercase hover:bg-slate-700 transition-all">
+ Detalles
+</button>
+ </div>
+ </div>`;
+}).join('');
+
+ } catch (e) {
+ console.error("Error:", e);
+ container.innerHTML = '<p class="text-red-500 text-center p-10 font-bold">Error al conectar con el servidor.</p>';
+ }
+}
 
 async function verDetallePedido(id) {
     const userData = JSON.parse(localStorage.getItem('usuario'));
