--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,11 @@
     </button>
 </div>
 
+            <button onclick="togglePanel()" class="bg-red-600 text-white px-8 py-4 rounded-2xl font-bold shadow-xl shadow-red-200 hover:scale-105 active:scale-95 transition-all">
+                + Nuevo Pedido
+            </button>
+        </header>
+
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
             <div class="bg-white p-8 rounded-[2rem] card-shadow border border-slate-100 flex flex-col justify-between h-48 relative overflow-hidden">
                 <div class="flex justify-between items-start z-10">
