--- a/public/index.html
+++ b/public/index.html
@@ -739,66 +739,80 @@ async function cargarPedidosDashboard() {
         renderizarPedidosLista(estatus);
     }
 
-    async function renderizarPedidosLista(filtro = 'Todos') {
-        const container = document.getElementById('listaPedidosCompleta');
-        const userData = JSON.parse(localStorage.getItem('usuario'));
-        container.innerHTML = '<div class="p-10 text-center text-slate-400 animate-pulse font-bold uppercase text-xs tracking-widest">Filtrando pedidos...</div>';
+   async function renderizarPedidosLista(filtro = 'Todos') {
+    const container = document.getElementById('listaPedidosCompleta');
+    const userData = JSON.parse(localStorage.getItem('usuario'));
+    container.innerHTML = '<div class="p-10 text-center text-slate-400 animate-pulse font-bold uppercase text-xs tracking-widest">Filtrando pedidos...</div>';
 
-        try {
-            const response = await fetch(`/api/obtener-pedidos?estaciones=${encodeURIComponent(userData.estaciones)}&rol=${userData.rol}`);
-            const data = await response.json();
-            let pedidos = data.pedidos || [];
+    try {
+        const response = await fetch(`/api/obtener-pedidos?estaciones=${encodeURIComponent(userData.estaciones)}&rol=${userData.rol}`);
+        const data = await response.json();
+        let pedidos = data.pedidos || [];
 
-            if (filtro !== 'Todos') {
-                pedidos = pedidos.filter(p => p.estatus.toLowerCase() === filtro.toLowerCase());
-            }
+        if (filtro !== 'Todos') {
+            pedidos = pedidos.filter(p => p.estatus.toLowerCase() === filtro.toLowerCase());
+        }
 
-            if (pedidos.length === 0) {
-                container.innerHTML = `
-                    <div class="bg-slate-50 border-2 border-dashed border-slate-200 rounded-[2rem] p-12 text-center">
-                        <i class="fas fa-folder-open text-slate-300 text-4xl mb-4"></i>
-                        <p class="text-slate-500 font-bold">No se encontraron pedidos con estatus "${filtro}"</p>
-                    </div>`;
-                return;
-            }
+        if (pedidos.length === 0) {
+            container.innerHTML = `
+                <div class="bg-slate-50 border-2 border-dashed border-slate-200 rounded-[2rem] p-12 text-center">
+                    <i class="fas fa-folder-open text-slate-300 text-4xl mb-4"></i>
+                    <p class="text-slate-500 font-bold">No se encontraron pedidos con estatus "${filtro}"</p>
+                </div>`;
+            return;
+        }
 
-            container.innerHTML = pedidos.map(p => {
-                const color = p.estatus === 'Pendiente' ? 'orange' : 
-                              p.estatus === 'En Ruta' ? 'purple' : 
-                              p.estatus === 'Entregado' ? 'emerald' : 
-                              p.estatus === 'Cancelado' ? 'red' : 'blue';
+        container.innerHTML = pedidos.map(p => {
+            const color = p.estatus === 'Pendiente' ? 'orange' : 
+                          p.estatus === 'En Ruta' ? 'purple' : 
+                          p.estatus === 'Entregado' ? 'emerald' : 
+                          p.estatus === 'Cancelado' ? 'red' : 'blue';
 
-                let icono = 'fa-box'; 
-                if (p.estatus === 'Pendiente') icono = 'fa-clock';
-                if (p.estatus === 'En Ruta')   icono = 'fa-truck-fast';
-                if (p.estatus === 'Entregado') icono = 'fa-check-circle';
-                if (p.estatus === 'Cancelado') icono = 'fa-ban';
+            let icono = 'fa-box'; 
+            if (p.estatus === 'Pendiente') icono = 'fa-clock';
+            if (p.estatus === 'En Ruta')   icono = 'fa-truck-fast';
+            if (p.estatus === 'Entregado') icono = 'fa-check-circle';
+            if (p.estatus === 'Cancelado') icono = 'fa-ban';
 
-                return `
-                <div class="bg-white p-6 rounded-[2rem] border border-slate-100 shadow-sm hover:shadow-md transition-all mb-4">
-                    <div class="flex flex-wrap justify-between items-center gap-4">
-                        <div class="flex items-center gap-4">
-                            <div class="h-12 w-12 bg-${color}-50 text-${color}-600 rounded-2xl flex items-center justify-center text-xl">
-                                <i class="far ${icono}"></i>
-                            </div>
-                            <div>
-                                <span class="text-[10px] font-black uppercase text-${color}-600 tracking-widest">${p.estatus}</span>
-                                <h3 class="font-black text-slate-900 text-lg uppercase">${p.estacion}</h3>
-                                <p class="text-xs text-slate-400 font-bold uppercase">${p.producto} — ${p.litros} L</p>
-                            </div>
+            // --- LÓGICA DEL CHECKBOX PARA LOGÍSTICA ---
+            // Solo aparece si el rol es Logística y el pedido está Pendiente
+            const esLogistica = userData.rol === 'Logística' || userData.rol === 'Admin'; 
+            const mostrarCheckbox = esLogistica && p.estatus === 'Pendiente';
+
+            return `
+            <div class="bg-white p-6 rounded-[2rem] border border-slate-100 shadow-sm hover:shadow-md transition-all mb-4 relative overflow-hidden">
+                <div class="flex flex-wrap justify-between items-center gap-4">
+                    <div class="flex items-center gap-4">
+                        
+                        ${mostrarCheckbox ? `
+                        <div class="flex items-center justify-center pr-2">
+                            <input type="checkbox" value="${p.id}" class="pedido-checkbox w-6 h-6 rounded-lg border-2 border-slate-200 text-slate-900 focus:ring-slate-900 transition-all cursor-pointer">
                         </div>
-                        <button onclick="verDetallePedido('${p.id}')" class="bg-[#1e293b] text-white px-5 py-3 rounded-xl font-black text-[10px] uppercase hover:bg-slate-700 transition-all">
+                        ` : ''}
+
+                        <div class="h-12 w-12 bg-${color}-50 text-${color}-600 rounded-2xl flex items-center justify-center text-xl shadow-inner">
+                            <i class="far ${icono}"></i>
+                        </div>
+                        <div>
+                            <span class="text-[10px] font-black uppercase text-${color}-600 tracking-widest">${p.estatus}</span>
+                            <h3 class="font-black text-slate-900 text-lg uppercase leading-tight">${p.estacion}</h3>
+                            <p class="text-xs text-slate-400 font-bold uppercase">${p.producto} — ${p.litros} L</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <button onclick="verDetallePedido('${p.id}')" class="bg-[#1e293b] text-white px-5 py-3 rounded-xl font-black text-[10px] uppercase hover:bg-slate-700 transition-all shadow-sm">
                             Detalles
                         </button>
                     </div>
-                </div>`;
-            }).join('');
+                </div>
+            </div>`;
+        }).join('');
 
-        } catch (e) {
-            console.error("Error:", e);
-            container.innerHTML = '<p class="text-red-500 text-center p-10 font-bold">Error al conectar con el servidor.</p>';
-        }
+    } catch (e) {
+        console.error("Error:", e);
+        container.innerHTML = '<p class="text-red-500 text-center p-10 font-bold">Error al conectar con el servidor.</p>';
     }
+}
 
 
 async function verDetallePedido(id) {
